--- a/TextEditor/Views/Documents/Edit.cshtml
+++ b/TextEditor/Views/Documents/Edit.cshtml
@@ -22,6 +22,7 @@
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
+                <a class="btn btn-danger ml-2" asp-action="Delete" asp-route-id="@Model.Id">Delete</a>
             </div>
         </form>
     </div>
