--- a/TextEditor/Views/Documents/Create.cshtml
+++ b/TextEditor/Views/Documents/Create.cshtml
@@ -11,7 +11,7 @@
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
+            <div class="form-group mb-3">
                 
                 <input asp-for="Title" class="form-control" value="Untitled Document"/>
                 <span asp-validation-for="Title" class="text-danger"></span>
