--- a/TextEditor/Views/Documents/Edit.cshtml
+++ b/TextEditor/Views/Documents/Edit.cshtml
@@ -9,7 +9,9 @@
     <div class="col-md-4">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
+            <input type="hidden" asp-for="Id"/>
+            <div class="form-group mt-3">
+
                 <input asp-for="Title" class="form-control" />
                 <span asp-validation-for="Title" class="text-danger"></span>
             </div>
@@ -20,16 +22,13 @@
             <div class="form-group">
                 <input type="hidden" asp-for="UserId" class="form-control"/>
             </div>
-            <div class="form-group">
+            <div class="form-group mt-3">
                 <input type="submit" value="Save" class="btn btn-primary" />
                 <a class="btn btn-danger ml-2" asp-action="Delete" asp-route-id="@Model.Id">Delete</a>
+                <a class="btn btn-info mt-3" asp-action="Index">Back to List</a>
             </div>
         </form>
     </div>
-</div>
-
-<div>
-    <a class="btn btn-info mt-3" asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
